--- a/public/signin/index.html
+++ b/public/signin/index.html
@@ -1,22 +1,17 @@
 <html>
-<<<<<<< HEAD
-  <header>
+  <head>
     <script src="./index.js" defer></script>
-  </header>
+  </head>
   <body>
-    <input id="signin_email" placeholder="email 입력" />
-    <input id="signin_password" placeholder="비밀번호 입력" />
+    <div>
+      <input id="signin_email" placeholder="이메일입력" />
+    </div>
+    <div>
+      <input id="signin_email" placeholder="이메일입력" />
+    </div>
+    <div>
+      <input id="signin_password" type="password" placeholder="비밀번호 입력" />
+    </div>
     <button id="signin_button">로그인</button>
   </body>
 </html>
-=======
-    <head>
-        <script src="./index.js" defer></script>
-    </head>
-    <body>
-        <input id="signin_email" placeholder="이메일입력"/>
-        <input id="signin_password" type="password" placeholder="비밀번호 입력" />
-        <button id="signin_button">로그인</button>
-    </body>
-</html>
->>>>>>> fce3c7f35b5362d4fe8c543cc971f571ae9b9c80
