--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -3,9 +3,11 @@
     <script src="./index.js" defer></script>
   </head>
   <body>
-    <input id="signup_email" placeholder="이메일 입력" />
-    <input id="signup_password" placeholder="패스워드 입력" type="password" />
-    <input id="signup_nickname" placeholder="닉네임 입력" />
-    <button id="signup_button">회원가입</button>
+    <div><input id="signup_email" placeholder="이메일 입력" /></div>
+    <div>
+      <input id="signup_password" placeholder="패스워드 입력" type="password" />
+    </div>
+    <div><input id="signup_nickname" placeholder="닉네임 입력" /></div>
+    <div><button id="signup_button">회원가입</button></div>
   </body>
 </html>
