--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       <input id="user_nickname" placeholder="닉네임을 입력해주세요." />
     </div> -->
     <button id="login_button">로그인</button>
-    <button id="mypage_button">마이페이지</button>
+    <div>
+      <button id="mypage_button">마이페이지</button>
+    </div>
   </body>
 </html>
