--- a/public/mypage/index.html
+++ b/public/mypage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <haed>
-    <script src="./index.js"></script>
+    <script src="./index.js" defer></script>
   </haed>
   <body>
     <p>테스트입니다.</p>
