--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <script src="./index.js" defer></script>
   </head>
   <body>
-    <div>
+    <!-- <div>
       <input id="user_email" placeholder="이메일을 입력해주세요." />
     </div>
     <div>
@@ -11,8 +11,10 @@
     </div>
     <div>
       <input id="user_nickname" placeholder="닉네임을 입력해주세요." />
-    </div>
+    </div> -->
     <button id="login_button">로그인</button>
-    <button id="myPage_button">마이페이지</button>
+    <div>
+      <button id="mypage_button">마이페이지</button>
+    </div>
   </body>
 </html>
