장바구니 작업완료

--- a/public/product/detail/index.html
+++ b/public/product/detail/index.html
@@ -3,6 +3,6 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <section id="product_list_wrapper"></section>
+    <section id="product_wrapper"></section>
   </body>
 </html>
