--- a/public/signin/index.html
+++ b/public/signin/index.html
@@ -1,10 +1,17 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <script src="./index.js" defer></script>
   </head>
   <body>
-    <input id="signin_email" placeholder="이메일입력" />
-    <input id="signin_password" type="password" placeholder="비밀번호 입력" />
-    <button id="signin_button">로그인</button>
+    <div class="container">
+      <input id="signin_email" placeholder="email" />
+      <input id="signin_password" placeholder="password" type="password" />
+      <button id="signin_button">login</button>
+      <button id="signup_button">sign up</button>
+    </div>
   </body>
 </html>
