--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="ko">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <!-- 여기에 CSS 파일을 링크 -->
     <script src="./index.js" defer></script>
+    <!-- JS 파일을 defer 속성으로 링크 -->
   </head>
   <body>
-    <!-- <div>
-      <input id="user_email" placeholder="이메일을 입력해주세요." />
-    </div>
-    <div>
-      <input id="user_password" placeholder="비밀번호를 입력해주세요." />
-    </div>
-    <div>
-      <input id="user_nickname" placeholder="닉네임을 입력해주세요." />
-    </div> -->
-    <button id="login_button">로그인</button>
-    <div>
-      <button id="mypage_button">마이페이지</button>
+    <div class="container">
+      <div>
+        <button id="login_button">로그인</button>
+        <button id="mypage_button">마이페이지</button>
+        <button id="product_button">쇼핑하러 가기</button>
+      </div>
     </div>
   </body>
 </html>
