--- a/public/mypage/index.html
+++ b/public/mypage/index.html
@@ -2,8 +2,12 @@
 <html>
   <haed>
     <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </haed>
   <body>
-    <p>테스트입니다.</p>
+    <div class="container">
+      <h1>Mypage</h1>
+      <section id="myPageHome"></section>
+    </div>
   </body>
 </html>
