--- a/public/order/index.html
+++ b/public/order/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <main>
@@ -32,7 +33,10 @@
         placeholder="받는 사람 전화번호를 입력하세요."
         id="receiver_phone"
       />
-      <button type="submit" id="submit_payment">결제</button>
+      <div id="product-value"></div>
+      <div>
+        <button type="submit" id="submit_payment">결제</button>
+      </div>
     </main>
   </body>
 </html>
