--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -1,11 +1,19 @@
 <html>
-  <head>
-    <script src="./index.js" defer></script>
-  </head>
-  <body>
-    <input id="signup_email" placeholder="이메일 입력" />
-    <input id="signup_password" placeholder="패스워드 입력" type="password" />
-    <input id="signup_nickname" placeholder="닉네임 입력" />
-    <button id="signup_button">회원가입</button>
-  </body>
+  <html lang="ko">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="index.css" />
+      <script src="./index.js" defer></script>
+    </head>
+    <body>
+      <div class="container">
+        <input id="signup_email" placeholder="email" />
+        <input id="signup_password" placeholder="password" type="password" />
+        <input id="signup_nickname" placeholder="nickname" />
+        <button id="signup_button">sign up</button>
+      </div>
+    </body>
+  </html>
 </html>
+s
